nullaway_error_171970b4-9ab5-4396-96f3-283f599b5310.txt
Stopping file watching and invalidating VFS after an error happened
/home/nima/Developer/nullness-benchmarks/eureka/eureka-core/src/main/java/com/netflix/eureka/RateLimitingFilter.java:119: error: [NullAway] initializer method does not guarantee @NonNull field serverConfig (line 111) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public RateLimitingFilter() {
           ^
